--- a/L6_SB_CRUD_API/src/main/resources/application.properties
+++ b/L6_SB_CRUD_API/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+logging.file.name=app.log
+logging.file.path=.
+logging.level.org.springframework.web=INFO
+logging.logback.rollingpolicy.clean-history-on-start=true
+logging.logback.rollingpolicy.max-file-size=1KB
+logging.logback.rollingpolicy.max-history=1
