--- a/L13_Spring_Security/pom.xml
+++ b/L13_Spring_Security/pom.xml
@@ -10,42 +10,32 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.geeksforgeeks.jbdl1</groupId>
-	<artifactId>L13_SB_With_JPA</artifactId>
+	<artifactId>L13_Spring_Security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>L13_SB_With_JPA</name>
-	<description>L13_SB_With_JPA</description>
+	<name>L13_Spring_Security</name>
+	<description>L13_Spring_Security</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.7.0</version>
-		</dependency>
+		
 
-
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
