--- a/L15_SB_withMySQL_Redis/src/main/resources/application.properties
+++ b/L15_SB_withMySQL_Redis/src/main/resources/application.properties
@@ -8,8 +8,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 
-##redis :Cache
-spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
+##redis :Cache :: LOCAL
+#spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
 
+spring.cache.type=redis
+#spring.redis.host=redis-17639.c274.us-east-1-3.ec2.cloud.redislabs.com
+#redis-14640.c124.us-central1-1.gce.cloud.redislabs.com
+#spring.redis.port=17639
+#spring.redis.password=GRyF4umzhWA1JSbOqE2WJyhlkBpPSiDX
+spring.data.redis.username=default
+spring.data.redis.host=redis-19441.c326.us-east-1-3.ec2.cloud.redislabs.com
+spring.data.redis.port=19441
+spring.data.redis.password=jZvtRcfGf1IvgxSz3Fyfb0OCsYywafiZ
